# inkcore-v5

./: .gitignore  JIANGE_V5_VS_V4_REPORT.md  NC_INTEGRATION.md  NC_INTEGRATION_WORKFLOW.md  README.md  RESTRUCTURE_REPORT.md  STORAGE_SPEC.md  VALIDATION_REPORT.md  analyze_with_model.py  batch_extract.sh  extract_all.sh  extract_sample.py  extract_techniques.py  generate_comparison_report.py  generate_llm_report.py  generate_report.py  llm_analyze_all.py  migrate_techniques.py  nc-inkcore-cli.py  nc-inkcore-complete.py  nc_api.py  nc_integration.py  pyproject.toml  test_jiange_v5.py  test_nc_api.py
agents/: __init__.py  core.py
gateway/: __init__.py  core.py
memory/: __init__.py  palace_v2.py
novels/将夜/chapters/: index.json
novels/将夜/reports/: FINAL_EXTRACTION_REPORT.md  progress_report.json
novels/将夜/techniques/: ch_0001_第一章 渭城有雨，少年有侍_techniques.json  ch_0002_第二章 能书能言穷酸少年_techniques.json  ch_0003_第三章 唐人的朴素是非观_techniques.json  ch_0004_第四章 非典型唐人的前路探讨_techniques.json  ch_0005_第五章 睹无月思怀_techniques.json  ch_0006_第六章 此去长安混人样_techniques.json  ch_0007_第七章 夜饮，梦了一片海_techniques.json  ch_0008_第八章 北山道外，一箭南来_techniques.json  ch_0009_第九章 心如磐石的侍卫们_techniques.json  ch_0010_第十章 有剑横于膝前，有剑穿行血间_techniques.json  ch_0011_第十一章 那剑悲鸣赞叹_techniques.json  ch_0012_第十二章 魔宗断指与边军闪箭_techniques.json  (+1109 more)
scheduler/: __init__.py  core.py
skills/: __init__.py  registry.py
tests/integration/: test_end_to_end.py
tests/unit/: test_agents.py  test_gateway.py  test_palace_v2.py  test_scheduler.py  test_skills.py
tools/: batch_extract.py  extract_batch.py  split_chapters.py
(+1564 files in other folders)
